# job-radar

./: .env.example  .gitignore  LICENSE  README.md  job_radar.db  pyproject.toml  test.db
job_radar/: config.py
job_radar/db/: models.py
job_radar/pipeline/: analyzer.py  extractor.py
job_radar/sources/: arbeitnow.py  arbeitsagentur.py
profiles/: flemming.yaml  hjoerdis.yaml  profile.txt
scripts/: bewerbung.py  dashboard.py  migrate_scores.py  notify.py  reanalyze.py  run_pipeline.py  show_jobs.py
templates/: anschreiben_template.tex
tests/: test_analyzer.py  test_config.py  test_extractor.py  test_models.py  test_pipeline.py
