[project]
name = "job-radar"
version = "0.1.0"
description = "Automated job listing aggregator and analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "beautifulsoup4>=4.14.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "pyyaml>=6.0",
    "rich>=14.3.3",
    "streamlit>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
include = ["job_radar*"]